--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
+    "exifr": "^7.1.3",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
