--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.1",
     "exifr": "^7.1.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.9"
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
